etc/iptables/iptables.rules
# Generated by iptables-save v1.6.1 on Sun Jun 18 20:19:26 2017
*nat
:PREROUTING ACCEPT [25:4874]
:INPUT ACCEPT [6:1098]
:OUTPUT ACCEPT [6:412]
:POSTROUTING ACCEPT [6:412]
COMMIT
# Completed on Sun Jun 18 20:19:26 2017
# Generated by iptables-save v1.6.1 on Sun Jun 18 20:19:26 2017
*mangle
:PREROUTING ACCEPT [948:270995]
:INPUT ACCEPT [936:268349]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [13:959]
:POSTROUTING ACCEPT [13:959]
COMMIT
# Completed on Sun Jun 18 20:19:26 2017
# Generated by iptables-save v1.6.1 on Sun Jun 18 20:19:26 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
COMMIT
# Completed on Sun Jun 18 20:19:26 2017
